charts/remote-charts/thanos/files/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: thanos.docker.localhost
    http:
      paths:
      - backend:
          service:
            name: thanos-store
            port:
              number: 10902
        path: /store(/|$)(.*)
        pathType: ImplementationSpecific
